--- a/rosboard/html/index.html
+++ b/rosboard/html/index.html
@@ -15,6 +15,7 @@
         <script type="text/javascript" src="js/masonry.pkgd.min.js"></script>
         <script type="text/javascript" src="js/eventemitter2.min.js"></script>
         <script text="text/javascript" src="js/import-helper.js"></script>
+        <script type="text/javascript" src="js/draggabilly.pkgd.min.js"></script>
         <script type="text/javascript" src="js/material.min.js" defer></script>
         <script type="text/javascript" src="js/leaflet.js"></script>
 	      <script type="text/javascript" src="js/gl-matrix.js"></script>
