feat(viewers): enhance JoystickViewer and prevent touch scrolling
- Updated JoystickViewer to improve touch handling and prevent page scrolling during joystick interaction.
- Added CSS styles to disable overscroll behavior and touch actions on the body element.
- Refactored event handling for joystick interactions to ensure smoother control and command publishing.

--- a/rosboard/html/index.html
+++ b/rosboard/html/index.html
@@ -24,7 +24,7 @@
 
         <title>ROSboard</title>
     </head>
-    <body>
+    <body style="overscroll-behavior: none; touch-action: manipulation;">
         <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
           <header class="mdl-layout__header">
             <div class="mdl-layout__header-row">
